--- a/package.json
+++ b/package.json
@@ -4,21 +4,56 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run build:nexus-typegen && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.0",
+    "@apollo/server": "^4.3.0",
+    "@as-integrations/next": "^1.2.0",
+    "@auth0/nextjs-auth0": "^1.9.2",
+    "class-validator": "0.12",
+    "graphql": "^16.6.0",
+    "graphql-fields": "^2.0.3",
+    "graphql-scalars": "^1.20.1",
+    "micro": "^9.4.1",
+    "micro-cors": "^0.1.1",
     "next": "12.3.1",
+    "nextjs-cors": "^2.1.2",
+    "nexus": "^1.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.37.0",
+    "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.4.0",
+    "react-tiny-link": "^3.6.1",
+    "reflect-metadata": "^0.1.13",
+    "tslib": "^2.4.1",
+    "type-graphql": "^1.1.1"
   },
+  "postcss": "^8.4.17",
+  "autoprefixer": "^10.4.12",
   "devDependencies": {
+    "@prisma/client": "4.8.0",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.7",
+    "@types/graphql-fields": "^1.3.4",
+    "@types/micro-cors": "^0.1.2",
     "@types/node": "18.8.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.17",
+    "prisma": "4.8.0",
+    "tailwindcss": "^3.1.8",
+    "ts-node": "^10.9.1",
+    "typegraphql-prisma": "^0.23.2",
     "typescript": "4.8.4"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
