--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@as-integrations/next": "^1.2.0",
     "@auth0/nextjs-auth0": "^1.9.2",
     "graphql": "^16.6.0",
+    "graphql-request": "^5.1.0",
     "next": "12.3.1",
     "nextjs-cors": "^2.1.2",
     "nexus": "^1.3.0",
