--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/server": "^4.3.0",
     "@as-integrations/next": "^1.2.0",
     "@auth0/nextjs-auth0": "^1.9.2",
+    "@vercel/postgres": "^0.2.1",
     "graphql": "^16.6.0",
     "graphql-request": "^5.1.0",
     "next": "12.3.1",
@@ -28,7 +29,7 @@
   "postcss": "^8.4.17",
   "autoprefixer": "^10.4.12",
   "devDependencies": {
-    "@prisma/client": "4.8.0",
+    "@prisma/client": "4.13.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
     "@types/node": "18.8.3",
@@ -38,7 +39,7 @@
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.17",
-    "prisma": "4.8.0",
+    "prisma": "4.13.0",
     "tailwindcss": "^3.1.8",
     "ts-node": "^10.9.1",
     "typescript": "4.8.4"
